--- a/index.html
+++ b/index.html
@@ -1,56 +1,135 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Badge Esempio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Beeware</title>
+    <meta name="author" content="p1c1s, sicmic">
+    <meta name="description"
+        content="Beeware - a modern honeypot system designed to attract and analyze cyber attackers. Developed by p1c1s and sicmic, providing valuable intelligence for security strategies.">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
+            margin: 0;
+            font-family: 'Roboto Mono', monospace;
+            background: radial-gradient(circle at center, #1a1a1a, #0d0d0d);
+            color: #f0f0f0;
             display: flex;
             flex-direction: column;
-            align-items: center; 
-            margin: 0;
-            padding: 20px;
-            background-color: #f2f2f2; 
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            text-align: center;
+            overflow: hidden;
+            position: relative;
         }
+
+        h1 {
+            font-size: 3.5rem;
+            margin: 0.5rem 0;
+            color: #ffcc00;
+            text-shadow: 0 0 15px #ffcc00;
+        }
+
+        .subtitle {
+            font-size: 1.2rem;
+            color: #e5e5e5;
+            opacity: 0.8;
+            margin-bottom: 20px;
+        }
+
+        p {
+            max-width: 600px;
+            line-height: 1.6;
+            font-size: 1.1rem;
+            padding: 15px;
+            background: rgba(26, 26, 26, 0.7);
+            border: 1px solid #333;
+            border-radius: 10px;
+            backdrop-filter: blur(5px);
+        }
+
+        .cta-container {
+            display: flex;
+            gap: 15px;
+            margin-top: 20px;
+            justify-content: center;
+        }
+
+        .cta {
+            padding: 10px 20px;
+            background-color: #501DAF;
+            border: 1px solid #000240;
+            color: #0d0d0d;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.2s ease;
+        }
+
+        .cta:hover {
+            background-color: #C06EFF;
+            color: #0d0d0d;
+            transform: scale(1.05);
+            box-shadow: 0 0 10px #D0B0FF;
+        }
+
         .badge-container {
             display: flex;
-            justify-content: center; 
-            gap: 10px; 
+            gap: 12px;
+            margin-top: 25px;
+            justify-content: center;
         }
+
         .badge {
             display: flex;
             align-items: center;
-            padding: 5px;
-            border: 1px solid #ccc;
-            border-radius: 100px;
-            background-color: #f9f9f9;
+            padding: 6px 8px;
+            border-radius: 50px;
+            background-color: #1a1a1a;
+            border: 1px solid #2a2a2a;
+            transition: all 0.2s ease;
+            cursor: pointer;
         }
+
+        .badge:hover {
+            background-color: #ffcc00;
+            color: #0d0d0d;
+            transform: scale(1.05);
+            box-shadow: 0 0 10px #ffcc00;
+        }
+
+
         .badge img {
             border-radius: 50%;
-            width: 30px; /* Dimensione dell'immagine */
-            height: 30px;
-            margin-right: 4px;
+            width: 28px;
+            height: 28px;
+            margin-right: 6px;
+            border: 1px solid rgb(0, 0, 0);
         }
+
         .badge .name {
-            font-size: 14px; 
-            font-weight: bold;
+            font-size: 14px;
+            font-weight: 500;
             text-decoration: none;
-            color: #333; 
-        }
-        p {
-            text-align: center; 
+            color: #e5e5e5;
         }
     </style>
 </head>
+
 <body>
-    <p>
-        <img src="src/logo.png" alt="Pi-hole logo" width="300" height="300">
-        <br>
-        <strong>Powerful Honeypot System...</strong>
-        <br>
-        <span style="font-size: 14px; color: gray;">Capture and analyze malicious traffic effectively...</span>
-    </p>
+    <div class="hex-bg"></div>
+    <img src="logo.svg" alt="Beeware logo" style="width: 330px;">
+    <p>This document outlines the implementation of a honeypot system. A honeypot is a computing resource intentionally
+        designed to attract and deceive cyber attackers by simulating system vulnerabilities or exposing seemingly
+        sensitive data. Its main objective is to monitor and analyze attack techniques, gathering valuable intelligence
+        to improve overall security strategies. Honeypots are powerful tools for studying malicious behavior and
+        developing more effective defense mechanisms.</p>
+    <div class="cta-container">
+        <a class="cta" href="https://github.com/theboysworkes/beeware">GitHub Repo</a>
+    </div>
     <div class="badge-container">
         <div class="badge">
             <img src="https://github.com/p1c1s.png" alt="Foto">
@@ -62,4 +141,5 @@
         </div>
     </div>
 </body>
+
 </html>
