--- a/index.html
+++ b/index.html
@@ -11,55 +11,68 @@
         content="Beeware - a modern honeypot system designed to attract and analyze cyber attackers. Developed by p1c1s and sicmic, providing valuable intelligence for security strategies.">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         body {
-            margin: 0;
             font-family: 'Roboto Mono', monospace;
-            background: radial-gradient(circle at center, #1a1a1a, #0d0d0d);
+            background: radial-gradient(circle at center, #292929, #1a1a1a, #0d0d0d);
             color: #f0f0f0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
-            overflow: hidden;
-            position: relative;
+            padding: 2rem 1rem;
+        }
+
+        img.logo {
+            max-width: 300px;
+            height: auto;
+            margin-bottom: 1.5rem;
+            border: 5px solid rgb(0, 0, 0);
+            border-radius: 50%;
         }
 
         h1 {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             margin: 0.5rem 0;
             color: #ffcc00;
             text-shadow: 0 0 15px #ffcc00;
         }
 
         .subtitle {
-            font-size: 1.2rem;
+            font-size: 1rem;
             color: #e5e5e5;
             opacity: 0.8;
-            margin-bottom: 20px;
+            margin-bottom: 1rem;
         }
 
         p {
-            max-width: 600px;
+            max-width: 100%;
+            width: 600px;
             line-height: 1.6;
-            font-size: 1.1rem;
-            padding: 15px;
+            font-size: 1rem;
+            padding: 1rem;
             background: rgba(26, 26, 26, 0.7);
             border: 1px solid #333;
             border-radius: 10px;
             backdrop-filter: blur(5px);
+            margin-bottom: 1.5rem;
         }
 
         .cta-container {
             display: flex;
-            gap: 15px;
-            margin-top: 20px;
+            flex-wrap: wrap;
+            gap: 1rem;
+            margin-bottom: 1.5rem;
             justify-content: center;
         }
 
         .cta {
-            padding: 10px 20px;
+            padding: 0.75rem 1.5rem;
             background-color: #501DAF;
             border: 1px solid #000240;
             color: #0d0d0d;
@@ -78,15 +91,15 @@
 
         .badge-container {
             display: flex;
-            gap: 12px;
-            margin-top: 25px;
+            flex-wrap: wrap;
+            gap: 1rem;
             justify-content: center;
         }
 
         .badge {
             display: flex;
             align-items: center;
-            padding: 6px 8px;
+            padding: 0.5rem 0.75rem;
             border-radius: 50px;
             background-color: #1a1a1a;
             border: 1px solid #2a2a2a;
@@ -99,8 +112,11 @@
             color: #0d0d0d;
             transform: scale(1.05);
             box-shadow: 0 0 10px #ffcc00;
-        }
 
+            .name {
+                color: #000000;
+            }
+        }
 
         .badge img {
             border-radius: 50%;
@@ -111,17 +127,51 @@
         }
 
         .badge .name {
-            font-size: 14px;
+            font-size: 0.875rem;
             font-weight: 500;
             text-decoration: none;
-            color: #e5e5e5;
+            color: #ffffff;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 0.95rem;
+                padding: 0.75rem;
+            }
+
+            .cta {
+                padding: 0.5rem 1rem;
+            }
+
+            .badge img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.7rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            .badge {
+                padding: 0.4rem 0.6rem;
+            }
         }
     </style>
 </head>
 
 <body>
-    <div class="hex-bg"></div>
-    <img src="logo.svg" alt="Beeware logo" style="width: 330px;">
+    <img src="logo.svg" alt="Beeware logo" class="logo">
     <p>This document outlines the implementation of a honeypot system. A honeypot is a computing resource intentionally
         designed to attract and deceive cyber attackers by simulating system vulnerabilities or exposing seemingly
         sensitive data. Its main objective is to monitor and analyze attack techniques, gathering valuable intelligence
