added wiki button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       justify-content: center;
     }
 
-    .cta {
+    .cta-github {
       padding: 0.75rem 1.5rem;
       background-color: #501DAF;
       border: 1px solid #000240;
@@ -68,11 +68,29 @@
       transition: all 0.2s ease;
     }
 
-    .cta:hover {
+    .cta-github:hover {
       background-color: #C06EFF;
       color: #0d0d0d;
       transform: scale(1.05);
       box-shadow: 0 0 10px #D0B0FF;
+    }
+
+    .cta-wiki {
+      padding: 0.75rem 1.5rem;
+      background-color: #d9d9d9;
+      border: 1px solid #000240;
+      color: #0d0d0d;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: all 0.2s ease;
+    }
+
+    .cta-wiki:hover {
+      background-color: #ffffff;
+      color: #0d0d0d;
+      transform: scale(1.05);
+      box-shadow: 0 0 10px #979797;
     }
 
     .badge-container {
@@ -186,13 +204,16 @@
 
   <p>
     Beeware is a modern honeypot system designed to attract and analyze cyber attackers.
-    Developed by <strong>Michela Sicuranza</strong> and <strong>Lorenzo Ricciardi</strong>, providing valuable intelligence for advanced
+    Developed by <strong>Michela Sicuranza</strong> and <strong>Lorenzo Ricciardi</strong>, providing valuable
+    intelligence for advanced
     security strategies.
   </p>
 
   <div class="cta-container">
-    <a class="cta" href="https://github.com/theboysworkers/beeware" target="_blank">GitHub Repo</a>
+    <a class="cta-github" href="https://github.com/theboysworkers/beeware" target="_blank">GitHub Repo</a>
+    <a class="cta-wiki" href="https://github.com/theboysworkers/beeware/wiki" target="_blank">Wiki</a>
   </div>
+
 
   <footer>
     Developed with ❤️ using the<a href="https://www.kathara.org" target="_blank"><img src="kathara.png"
