--- a/machines_configurations/wsa2/html/invest/prezzi.html
+++ b/machines_configurations/wsa2/html/invest/prezzi.html
@@ -6,13 +6,14 @@
   <title>Prezzi in Tempo Reale - InvestSmart</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">InvestSmart</div>
+      <div class="logo">Invest</div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.php">Home</a></li>
         <li><a href="prezzi.html" class="active">Prezzi in tempo reale</a></li>
         <li><a href="index.html#servizi">Servizi</a></li>
         <li><a href="index.html#contatti">Contatti</a></li>
@@ -43,7 +44,7 @@
   </main>
 
   <footer>
-    <p>© 2025 InvestSmart - Consulenza Investimenti</p>
+<p>© <span id="current-year"></span> Invest - Consulenza Investimenti</p>  </footer>
   </footer>
 
   <script>
