--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="description"
     content="Beeware - a modern honeypot system designed to attract and analyze cyber attackers. Developed by Michela Sicuranza and Lorenzo Ricciardi, providing valuable intelligence for security strategies.">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     * {
       box-sizing: border-box;
@@ -89,6 +90,25 @@
     .cta-wiki:hover {
       background-color: #ffffff;
       color: #0d0d0d;
+      transform: scale(1.05);
+      box-shadow: 0 0 10px #979797;
+    }
+
+    .cta-telegram {
+      padding: 0.35rem 0.65rem;
+      background-color: #ffffff;
+      border: 1px solid #000240;
+      color: #0088cc;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.7rem;
+      transition: all 0.2s ease;
+    }
+
+    .cta-telegram:hover {
+      background-color: #0088cc;
+      color: #ffffff;
       transform: scale(1.05);
       box-shadow: 0 0 10px #979797;
     }
@@ -212,6 +232,9 @@
   <div class="cta-container">
     <a class="cta-github" href="https://github.com/theboysworkers/beeware" target="_blank">GitHub Repo</a>
     <a class="cta-wiki" href="https://github.com/theboysworkers/beeware/wiki" target="_blank">Wiki</a>
+    <a class="cta-telegram" href="https://t.me/theboysworkers" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-telegram-plane"></i>
+    </a>
   </div>
 
 
